--- a/index.html
+++ b/index.html
@@ -18,55 +18,51 @@
 
     <main>
         <div class="categories">
-            <button class="category main-btn" id="random-btn">
-                Random
-            </button>
-
-            <button class="category" id="inspirational-btn">
+            <button class="category" id="inspirational">
                 Inspirational
             </button>
 
-            <button class="category" id="wisdom-btn">
+            <button class="category" id="wisdom">
                 Wisdom
             </button>
 
-            <button class="category" id="love-btn">
+            <button class="category" id="love">
                 Love
             </button>
 
-            <button class="category" id="success-btn">
+            <button class="category" id="success">
                 Success
             </button>
 
-            <button class="category" id="life-btn">
+            <button class="category" id="life">
                 Life
             </button>
             
-            <button class="category" id="happiness-btn">
+            <button class="category" id="happiness">
                 Happiness
             </button>
 
-            <button class="category" id="motivational-btn">
+            <button class="category" id="motivational">
                 Motivational
             </button>
 
-            <button class="category" id="famousquotes-btn">
+            <button class="category" id="famous-quotes">
                 Famous Quotes
             </button>
 
-            <button class="category" id="history-btn">
+            <button class="category" id="history">
                 History
             </button>
 
-            <button class="category" id="friendship-btn">
+            <button class="category" id="friendship">
                 Friendship
             </button>
 
-            <button class="category" id="technology-btn">
+            <button class="category" id="technology">
                 Technology
             </button>
 
-            <button class="category" id="faith-btn">
+            <button class="category" id="faith">
                 Faith
             </button>
         </div>
@@ -77,7 +73,7 @@
                 <cite class="author" id="author">loading...</cite>
             </div>
              <div class="btn-wrapper">
-            <button class="category main-btn" id="main-btn"></button>
+            <button class="next-btn" id="next-btn"></button>
         </div>
         </div>
        
