add new class to btns for styling

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </button>
         </div>
 
-        <div class="quote-wrapper">
+        <div class="quote-wrapper" id="quote-wrapper">
             <div class="quote-content">
                 <blockquote class="quote" id="quote"></blockquote>
                 <cite class="author" id="author">loading...</cite>
