--- a/index.html
+++ b/index.html
@@ -76,7 +76,10 @@
             <button class="next-btn" id="next-btn"></button>
         </div>
         </div>
-       
     </main>
+
+    <footer>
+        <p>Developed by <span class="italic">MxCrvr</span> | 2023</p>
+    </footer>
 </body>
 </html>
